Closed
Bug 1947181
Opened 1 year ago
Closed 1 year ago
[Wayland] Tab preview position doesn't update all the time
Categories
(Core :: Widget: Gtk, defect)
Core
Widget: Gtk
Tracking
()
VERIFIED
FIXED
137 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr128 | --- | unaffected |
| firefox135 | --- | unaffected |
| firefox136 | --- | unaffected |
| firefox137 | --- | verified |
People
(Reporter: eijebong, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
mozregression points to 581863 although it might be something that landed while 1945834 was happening.
To reproduce, open a few, tabs, select one on the left, then go hover on the rightmost tab until the preview appears, then hover on the one just left of it.
The preview from the second tab will appear in place where the preview from the rightmost tab was.
See attached video
Flags: needinfo?(emilio)
Comment 1•1 year ago
|
||
Set release status flags based on info from the regressing bug 581863
status-firefox135:
--- → unaffected
status-firefox136:
--- → unaffected
status-firefox137:
--- → affected
status-firefox-esr128:
--- → unaffected
| Assignee | ||
Updated•1 year ago
|
Assignee: nobody → emilio
| Assignee | ||
Comment 2•1 year ago
|
||
This used to happen unconditionally and now only after configure, which
doesn't happen for these apparently.
| Assignee | ||
Updated•1 year ago
|
Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/cb6ba5258add
Keep updating mBounds for direct wayland popup moves. r=gfx-reviewers,nical
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 137 Branch
Updated•1 year ago
|
Flags: qe-verify+
Comment 6•1 year ago
|
||
Hello! I can confirm that the issue is fixed with firefox 137.0 on Ubuntu 22.04.
I will update the flags and the status of this issue.
Have a nice day!
You need to log in
before you can comment on or make changes to this bug.
Description
•