Bug 1947181 - Keep updating mBounds for direct wayland popup moves. r=gfx-reviewers,nical

This used to happen unconditionally and now only after configure, which
doesn't happen for these apparently.

Differential Revision: https://phabricator.services.mozilla.com/D237597